# open-lilli

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Current-Feedback  LAYOUT_ANALYSIS.md  LICENSE  QUALITY_GATES_IMPLEMENTATION.md  README.md  TEMPLATE_LOADER_IMPLEMENTATION.md  pyproject.toml  strategy-deck.pptx  template_driven_planning.md
.claude/: settings.local.json
content/: final_proposal.md
docs/: theme_color_extraction.md  visual_proofreader_implementation.md
examples/: auto_refine_demo.py  complete_demo.py  content_fit_demo.py  font_extraction_demo.py  ml_layout_demo.py  narrative_flow_demo.py  outline_demo.py  quality_gates_demo.py  sample_content.txt  template_loader_demo.py  theme_color_demo.py  visual_excellence_demo.py  visual_proofreader_demo.py
open_lilli/: __init__.py  chart_advisor.py  cli.py  content_fit_analyzer.py  content_generator.py  content_processor.py  corporate_asset_library.py  create_sample_template.py  engagement_tuner.py  exceptions.py  flow_intelligence.py  layout_recommender.py  models.py  native_chart_builder.py  outline_generator.py  process_flow_generator.py  regeneration_manager.py  reviewer.py  slide_assembler.py  slide_planner.py  template_ingestion.py  template_loader.py  template_parser.py  visual_generator.py  visual_proofreader.py
tests/: test_basic.py  test_chart_advisor.py  test_chart_palette_integration.py  test_cli.py  test_content_fit_analyzer.py  test_content_generator.py  test_content_processor.py  test_content_style_context.py  test_corporate_asset_library.py  test_e2e.py  (+16 more)
(+2 files in other folders)
